--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,13 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
+		<link rel="shortcut icon" href="Asset/favico.ico">
 		<title>joinBareng.an</title>
 	</head>
 	<body>
 		<div class="join-container">
 			<header class="join-header">
+				<img src="Asset/LogoJoinBarengan.png" alt="" style="width:60px;height:60px;">
 				<h1>joinBareng.an</h1>
 			</header>
 			<main class="join-main">
