menambahkan rasa yang pernah ada
ngpoles dikit kok. beneran

--- a/public/chat.html
+++ b/public/chat.html
@@ -23,6 +23,9 @@
         <ul id="users"></ul>
       </div>
       <div class="chat-messages">
+        <!--=================================================================-->
+          <!--tempat baloonm chat-->
+        <!--==================================================================-->
       </div>
     </main>
     <div class="chat-form-container">
